--- a/ROOT/about.html
+++ b/ROOT/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="About me and Contact page-Corina Gomez">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +17,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Corina Gomez</title>
+    <title>About me and Contact page for Corina Gomez</title>
   </head>
   <body cz-shortcut-listen="true">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -63,13 +64,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="yoga app example photo"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="weather app example photot" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="yogurt app example photo"/>
         </div>
       </div>
     </div>
