--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Corina Gomez</title>
+    <meta name="description" content="Main homepage for front-end developer-Corina Gomez">
+    <title>Corina Gomez-front end developer-homepage</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -60,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/yoga.png" class="img-fluid rounded" alt="photo of yoga pose"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -89,12 +90,12 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather.png" class="img-fluid rounded" alt="photo of weather app preview"/>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/yogurt.png" class="img-fluid rounded" alt="photo of yogurt cup"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
